--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,9 @@
     </a>
   </div>
   <div class="main">
-    <div class="ui centered dividing header"> 欢迎你：{{ currentUser?.username }}</div>
+    <div class="ui centered dividing header">
+      欢迎你：{{ currentUser?.username }} 
+    </div>
     <router-outlet></router-outlet>
   </div>
 </div>
