--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -29,7 +29,7 @@
           <a href="">忘记密码？</a>
         </form>
       </div>
-      <div class="ui vertical divider" style="left:350px;margin-top:5px;">OR</div>
+      <div class="ui vertical divider" style="margin-top:5px;">OR</div>
       <div class="center aligned column">
         <button class="ui big positive labeled icon button" (click)="doLogin()" [disabled]="!loginForm.form.valid">
           <i class="checkmark icon"></i>登录
