--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -25,7 +25,7 @@
               <input type="password" name="password" placeholder="请输入密码" [(ngModel)]="user.password" required>
             </div>
           </div>
-          <div class="g-recaptcha" data-sitekey="6Lf-NRQUAAAAAKeYh3zg2zS9P0I6ocaTKcBSqjCr"></div>
+          <!--<div class="g-recaptcha" data-sitekey="6Lf-NRQUAAAAAKeYh3zg2zS9P0I6ocaTKcBSqjCr"></div>-->
           <a href="">忘记密码？</a>
         </form>
       </div>
